# contracts

./: CHANGELOG.md  Cargo.toml  README.md  build.sh  release.sh
acta_deployer_contract/: Cargo.toml
acta_deployer_contract/src/: test.rs
acta_did_contract/: Cargo.toml  README.md
acta_did_contract/src/test/: contract.rs  did_uri.rs  setup.rs
acta_issuance_contract/: Cargo.toml  README.md
acta_issuance_contract/src/: contract.rs
acta_issuance_contract/src/test/: setup.rs
acta_vault_contract/: Cargo.toml  README.md
acta_vault_contract/src/: contract.rs  lib.rs  storage.rs  vault_trait.rs  verifiable_credential.rs
acta_vault_contract/src/test/: contract.rs  setup.rs
contracts/acta/: Cargo.toml
contracts/acta/src/: acta_trait.rs  contract.rs  error.rs  issuer.rs  lib.rs  storage.rs  test.rs  vc_status.rs  verifiable_credential.rs
contracts/issuance/: Cargo.toml  README.md
contracts/issuance/src/: contract.rs  storage.rs  test.rs  vc_issuance_trait.rs
contracts/issuance/src/test/: contract.rs  setup.rs
contracts/vault/: Cargo.toml  README.md
contracts/vault/src/: contract.rs  error.rs  issuer.rs  storage.rs  test.rs  vault_trait.rs
contracts/vault/src/test/: contract.rs  setup.rs
docs/: issuance-contract-readme.md  vault-contract-readme.md  w3c-standards-support.md
scripts/: build.sh  release.sh
