[workspace]
resolver = "2"

members = ["contracts/vault", "contracts/issuance"]

[workspace.package]
version = "0.20.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ACTA-Team/contracts"

[workspace.dependencies]
soroban-sdk = { version = "=20.5.0" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
